# server/swagger.js
@@ -6,10 +6,16 @@ const options = {
     info: {
       title: 'Wallet App REST API',
       version: '1.0.0',
-      description: "API documentation for Express application to manage users and transactions in database",
+      description:
+        'API documentation for Express application to manage users and transactions in database',
     },
   },
-  apis: ['./routers/*.router.js', './service/schema/*.schema.js', './controllers/*.controller.js', './service/*.js'],
+  apis: [
+    './routers/*.router.js',
+    './service/schema/*.schema.js',
+    './controllers/*.controller.js',
+    './service/*.js',
+  ],
 };
 
 export const openSpec = swaggerJsdoc(options);
@@ -17,67 +23,94 @@ export const openSpec = swaggerJsdoc(options);
 import swaggerAutogen from 'swagger-autogen';
 
 const doc = {
-    info: {
-        version: "1.0.0",
-        title: "My API",
-        description: "Documentation automatically generated by the <b>swagger-autogen</b> module."
+  info: {
+    version: '1.0.0',
+    title: 'My API',
+    description: 'Documentation automatically generated by the <b>swagger-autogen</b> module.',
+  },
+  host: 'localhost:3000',
+  basePath: '/',
+  schemes: ['http', 'https'],
+  consumes: ['application/json'],
+  produces: ['application/json'],
+  tags: [
+    {
+      name: 'User',
+      description: 'Endpoints',
     },
-    host: "localhost:3000",
-    basePath: "/",
-    schemes: ['http', 'https'],
-    consumes: ['application/json'],
-    produces: ['application/json'],
-    tags: [
-        {
-            "name": "User",
-            "description": "Endpoints"
-        }
-    ],
-    securityDefinitions: {
-        apiKeyAuth:{
-            type: "apiKey",
-            in: "header",       // can be "header", "query" or "cookie"
-            name: "X-API-KEY",  // name of the header, query parameter or cookie
-            description: "any description..."
-        }
+  ],
+  securityDefinitions: {
+    apiKeyAuth: {
+      type: 'jwtToken',
+      in: 'header', // can be "header", "query" or "cookie"
+      name: 'Authorization', // name of the header, query parameter or cookie
+      description: 'auth bearer token',
     },
-    definitions: {
-        Parents: {
-            father: "Simon Doe",
-            mother: "Marie Doe"
+  },
+  definitions: {
+    User: {
+      type: 'object',
+      properties: {
+        $email: {
+          type: 'string',
+          example: 'exampleemail@exampleemail.com',
         },
-        User: {
-            name: "Jhon Doe",
-            age: 29,
-            parents: {
-                $ref: '#/definitions/Parents'
-            },
-            diplomas: [
-                {
-                    school: "XYZ University",
-                    year: 2020,
-                    completed: true,
-                    internship: {
-                        hours: 290,
-                        location: "XYZ Company"
-                    }
-                }
-            ]
+        $password: {
+          type: 'string',
+          example: 'try67hgj',
         },
-        AddUser: {
-            $name: "Jhon Doe",
-            $age: 29,
-            about: ""
-        }
-    }
-}
+        $firstName: {
+          type: 'string',
+          example: 'John Doe',
+        },
+      },
+    },
+    Transaction: {
+      type: 'object',
+      properties: {
+        date: {
+          type: 'string',
+          example: '2023:07:12',
+        },
+        year: {
+          type: 'string',
+          example: '2023',
+        },
+        month: {
+          type: 'string',
+          example: 'July',
+        },
+        type: {
+          type: 'string',
+          example: 'Income',
+        },
+        category: {
+          type: 'string',
+          example: 'Products',
+        },
+        comment: {
+          type: 'string',
+          example: 'Grocery',
+        },
+        sum: {
+          type: 'number',
+          example: '27',
+        },
+        owner: {
+          type: 'string',
+          $ref: '#/definitions/User',
+        },
+      },
+    },
+  },
+};
 
-const outputFile = './swagger-output.json'
-const endpointsFiles = ['./routers/users.router.js']
+const outputFile = './swagger-output.json';
+const endpointsFiles = ['./routers/users.router.js', './routers/users.router.js'];
 
 swaggerAutogen(outputFile, endpointsFiles, doc).then(() => {
-    './server'          // Your project's root file
-})
+  './server'; // Your project's root file
+});
 /*
 swaggerAutogen('./swagger-output.json', [
   './routers/transactions.router.js',
